[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reflec"
version = "0.0.1"
authors = [{ name = "enpotid" }]
description = "Deep learning framework"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "numpy==2.0.2",
]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


[project.urls]
Homepage = "https://github.com/enpotid/reflec"

[tool.setuptools]
packages = { find = {} }
